--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.16.0",
     "stripe": "^13.9.0",
     "zukeeper": "^1.0.2",
