--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-stars": "^2.2.5",
     "stripe": "^13.9.0",
+    "sweetalert2": "^11.7.32",
     "zukeeper": "^1.0.2",
     "zustand": "^4.4.1"
   },
