--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.1",
+    "@sendgrid/mail": "^7.7.0",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.7",
     "axios": "^1.5.1",
@@ -23,7 +24,7 @@
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.17.0",
     "stripe": "^13.9.0",
     "zukeeper": "^1.0.2",
     "zustand": "^4.4.1"
